// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetDetailsImageCarousel should call function 1`] = `
<View
  style={
    Object {
      "borderRadius": 4,
      "height": 180,
      "overflow": "hidden",
    }
  }
>
  <SnapCarousel
    activeIndex={1}
    carouselData={
      Array [
        Object {
          "id": 1,
          "image_url": "https://www.bookadsnow.com/images/mobile/Newspaper-banner_3.jpg",
        },
        Object {
          "id": 2,
          "image_url": "https://is1-3.housingcdn.com/4f2250e8/6ec86b0c4555a4f83e0ea77c552db2a0/v0/fs/vessella_meadows-narsingi-hyderabad-vessella_group.jpg",
        },
        Object {
          "id": 3,
          "image_url": "https://www.icicibank.com/managed-assets/images/blog/big/how-is-tax-on-sale-of-inherited-property-calculated.jpg",
        },
      ]
    }
    carouselItem={[Function]}
    itemWidth={750}
    onSnapToItem={[Function]}
    testID="bannerSnap"
  />
  <PaginationComponent
    activeDotStyle={
      Object {
        "borderWidth": 1,
      }
    }
    activeSlide={1}
    containerStyle={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "flex": 0,
        "paddingVertical": 5,
        "position": "absolute",
      }
    }
    dotsLength={3}
    inactiveDotStyle={
      Object {
        "backgroundColor": "#808D9B",
        "borderColor": "transparent",
      }
    }
  />
</View>
`;

exports[`AssetDetailsImageCarousel should match snapshot 1`] = `
<View
  style={
    Object {
      "borderRadius": 4,
      "height": 180,
      "overflow": "hidden",
    }
  }
>
  <SnapCarousel
    activeIndex={0}
    carouselData={
      Array [
        Object {
          "id": 1,
          "image_url": "https://www.bookadsnow.com/images/mobile/Newspaper-banner_3.jpg",
        },
        Object {
          "id": 2,
          "image_url": "https://is1-3.housingcdn.com/4f2250e8/6ec86b0c4555a4f83e0ea77c552db2a0/v0/fs/vessella_meadows-narsingi-hyderabad-vessella_group.jpg",
        },
        Object {
          "id": 3,
          "image_url": "https://www.icicibank.com/managed-assets/images/blog/big/how-is-tax-on-sale-of-inherited-property-calculated.jpg",
        },
      ]
    }
    carouselItem={[Function]}
    itemWidth={750}
    onSnapToItem={[Function]}
    testID="bannerSnap"
  />
  <PaginationComponent
    activeDotStyle={
      Object {
        "borderWidth": 1,
      }
    }
    activeSlide={0}
    containerStyle={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "flex": 0,
        "paddingVertical": 5,
        "position": "absolute",
      }
    }
    dotsLength={3}
    inactiveDotStyle={
      Object {
        "backgroundColor": "#808D9B",
        "borderColor": "transparent",
      }
    }
  />
</View>
`;

exports[`AssetDetailsImageCarousel should match snapshot for carouselItem 1`] = `
<Image
  source={
    Object {
      "uri": undefined,
    }
  }
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;

exports[`AssetDetailsImageCarousel should match snapshot without banners 1`] = `""`;
